Changes bookArena Link

--- a/templates/work.html
+++ b/templates/work.html
@@ -20,16 +20,16 @@
   </div>
   <div class="work_container book">
     <div class="work_details_reverse">
-      <p><a class="work_title" href="https://minesht.pythonanywhere.com/">bookArena</a></p>
+      <p><a class="work_title" href="https://bookarena.onrender.com">bookArena</a></p>
       <div class="work_description_reverse">
         <p class="brief">The web-application maintains record of books. A user can
            store, retrieve and delete book information.
         </p>
-        <p class="tools">Flask, Python, CSS, HTML</p>
+        <p class="tools">Flask, Python, CSS, HTML, SQLAlchemy</p>
       </div>
       <div class="work_links">
         <a class="github_link" href="https://github.com/Minesh6684/bookArena"><i class="bi bi-github"></i></a>
-        <a href="https://minesht.pythonanywhere.com/"><i class="bi bi-box-arrow-up-right"></i></a>
+        <a href="https://bookarena.onrender.com"><i class="bi bi-box-arrow-up-right"></i></a>
       </div>
     </div>
     <div class="work_image2">
