Changes in max-width

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {%extends 'base.html'%}
 {%block body%}
-<div class="home text-white">
+<div class="home text-white" style="max-width: 1200px; margin: auto">
     <div class="container_home fs-3 lh-1" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> <!-- fs for font-size, lh for line height -->
         <!-- Profile Image section -->
         <div class="profile_photo"> <!-- position-absolute end-50, keeping the element at its parent container starting position and let the half of the page from end empty -->
