--- a/templates/work.html
+++ b/templates/work.html
@@ -1,6 +1,6 @@
 {%extends 'base.html'%}
 {%block body%}
-<section class="work">
+<section class="work" style="max-width: 1200px; margin: auto">
   <p class="work_head">Some Things I've Built</p>
   <div class="work_container feed">
     <div class="work_image1">
