--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 {%block body%}
 <!--  p-2 p-sm-3 p-md-4 p-lg-5 -->
-<section class="about text-light text-center p-2 p-sm-5"  style="max-width: 1200px; margin:0 auto"> <!-- bg-color, renders background color where color can be primary, secondary etc -->
+<section class="about text-light text-center p-2 p-sm-5 m-3"  style="max-width: 1200px; margin:0 auto"> <!-- bg-color, renders background color where color can be primary, secondary etc -->
     <div class="row d-flex align-items-center"> <!-- d-flex, converts an element's display property to flex -->
       <!-- 
           Columns are divede in 12 sections in bootstrap, with respect to varios size of the screen
