--- a/templates/work.html
+++ b/templates/work.html
@@ -7,20 +7,20 @@
       <img class="res_img" src="../static/img/FeedEveryone.png" alt="">
     </div>
     <div class="work_details">
-      <p><a class="work_title" href="https://feedeveryone.onrender.com/login">FeedEveryone</a></p>
+      <p><a class="work_title" href="https://feedeveryone.onrender.com/login" target="_blank">FeedEveryone</a></p>
       <div class="work_description">
         <p class="brief">A medium of communication between people having food willing to donate and homeless without food</p>
         <p class="tools">Redux, React, Express, Node JS, MongoDB, Material UI and CSS</p>
       </div>
       <div class="work_links">
-        <a class="github_link" href="https://github.com/Minesh6684/MERN"><i class="bi bi-github"></i></a>
-        <a href="https://feedeveryone.onrender.com/login"><i class="bi bi-box-arrow-up-right"></i></a>
+        <a class="github_link" href="https://github.com/Minesh6684/MERN" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://feedeveryone.onrender.com/login" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
       </div>
     </div>
   </div>
   <div class="work_container book">
     <div class="work_details_reverse">
-      <p><a class="work_title" href="https://bookarena.onrender.com">bookArena</a></p>
+      <p><a class="work_title" href="https://bookarena.onrender.com" target="_blank">bookArena</a></p>
       <div class="work_description_reverse">
         <p class="brief">The web-application maintains record of books. A user can
            store, retrieve and delete book information.
@@ -28,8 +28,8 @@
         <p class="tools">Flask, Python, CSS, HTML, SQLAlchemy</p>
       </div>
       <div class="work_links">
-        <a class="github_link" href="https://github.com/Minesh6684/bookArena"><i class="bi bi-github"></i></a>
-        <a href="https://bookarena.onrender.com"><i class="bi bi-box-arrow-up-right"></i></a>
+        <a class="github_link" href="https://github.com/Minesh6684/bookArena" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://bookarena.onrender.com" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
       </div>
     </div>
     <div class="work_image2">
@@ -41,20 +41,20 @@
       <img class="res_img" src="../static/img/FishOn.png" alt="">
     </div>
     <div class="work_details">
-      <p><a class="work_title" href="https://fishon.vercel.app/">FishOn</a></p>
+      <p><a class="work_title" href="https://fishon.vercel.app/" target="_blank">FishOn</a></p>
       <div class="work_description">
         <p class="brief">Extensive use of fundamentals of web building technologies, FishOn is a static website providing information about fish products</p>
         <p class="tools">HTML, CSS, Javascript</p>
       </div>
       <div class="work_links">
-        <a class="github_link" href="https://github.com/Minesh6684/FishOn"><i class="bi bi-github"></i></a>
-        <a href="https://fishon.vercel.app/"><i class="bi bi-box-arrow-up-right"></i></a>
+        <a class="github_link" href="https://github.com/Minesh6684/FishOn" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://fishon.vercel.app/" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
       </div>
     </div>
   </div>
   <div class="work_container ttt">
     <div class="work_details_reverse">
-      <p><a class="work_title" href="https://tic-tac-toe-minesh6684.vercel.app/">Tic Tac Toe</a></p>
+      <p><a class="work_title" href="https://tic-tac-toe-minesh6684.vercel.app/" target="_blank">Tic Tac Toe</a></p>
       <div class="work_description_reverse">
         <p class="brief">Two player game let the user change one's name, let select the player2 mode as Computer or Human
            It also tracks the number of games played and winning count.
@@ -62,8 +62,8 @@
         <p class="tools">HTML, CSS, Javascript</p>
       </div>
       <div class="work_links">
-        <a class="github_link" href="https://github.com/Minesh6684/TicTacToe"><i class="bi bi-github"></i></a>
-        <a href="https://tic-tac-toe-minesh6684.vercel.app/"><i class="bi bi-box-arrow-up-right"></i></a>
+        <a class="github_link" href="https://github.com/Minesh6684/TicTacToe" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://tic-tac-toe-minesh6684.vercel.app/" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
       </div>
     </div>
     <div class="work_image4">
@@ -77,7 +77,7 @@
         It also tracks the number of games played and winning count.
       </p>
       <p class="tools">HTML, CSS, Javascript</p>
-      <a class="github_link" href="https://github.com/Minesh6684/Javascript/tree/main/MIDTERM"><i class="bi bi-github"></i></a>
+      <a class="github_link" href="https://github.com/Minesh6684/Javascript/tree/main/MIDTERM" target="_blank"><i class="bi bi-github"></i></a>
     </div>
     <div class="work_card">
       <p class="work_title">Course Registration</p>
